--- a/server.dSYM/Contents/Resources/Relocations/aarch64/server.yml
+++ b/server.dSYM/Contents/Resources/Relocations/aarch64/server.yml
@@ -2,51 +2,50 @@
 triple:          'arm64-apple-darwin'
 binary-path:     server
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x10000249C, symSize: 0x5C }
-  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x10000249C, symSize: 0x5C }
-  - { offsetInCU: 0xA1, offset: 0xA1, size: 0x8, addend: 0x0, symName: _checkArgs, symObjAddr: 0x5C, symBinAddr: 0x1000024F8, symSize: 0x94 }
-  - { offsetInCU: 0xE5, offset: 0xE5, size: 0x8, addend: 0x0, symName: _serverControl, symObjAddr: 0xF0, symBinAddr: 0x10000258C, symSize: 0x88 }
-  - { offsetInCU: 0x125, offset: 0x125, size: 0x8, addend: 0x0, symName: _recvFromClient, symObjAddr: 0x178, symBinAddr: 0x100002614, symSize: 0x124 }
-  - { offsetInCU: 0x165, offset: 0x165, size: 0x8, addend: 0x0, symName: _addNewSocket, symObjAddr: 0x29C, symBinAddr: 0x100002738, symSize: 0x34 }
-  - { offsetInCU: 0x197, offset: 0x197, size: 0x8, addend: 0x0, symName: _processClient, symObjAddr: 0x2D0, symBinAddr: 0x10000276C, symSize: 0x24 }
-  - { offsetInCU: 0x26, offset: 0x211, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100002790, symSize: 0x188 }
-  - { offsetInCU: 0xA3, offset: 0x28E, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100002790, symSize: 0x188 }
-  - { offsetInCU: 0xF5, offset: 0x2E0, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x100002918, symSize: 0x24 }
-  - { offsetInCU: 0x11D, offset: 0x308, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x10000293C, symSize: 0xD0 }
-  - { offsetInCU: 0x17D, offset: 0x368, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x100002A0C, symSize: 0x158 }
-  - { offsetInCU: 0x1EB, offset: 0x3D6, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x100002B64, symSize: 0x134 }
-  - { offsetInCU: 0x23D, offset: 0x428, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x100002C98, symSize: 0x154 }
-  - { offsetInCU: 0x26, offset: 0x5A8, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002DEC, symSize: 0x74 }
-  - { offsetInCU: 0x41, offset: 0x5C3, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100002E60, symSize: 0x40 }
-  - { offsetInCU: 0x66, offset: 0x5E8, size: 0x8, addend: 0x0, symName: _ipAddressToString.ipString, symObjAddr: 0x1E6D, symBinAddr: 0x100008000, symSize: 0x0 }
-  - { offsetInCU: 0x8A, offset: 0x60C, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x100003160, symSize: 0x74 }
-  - { offsetInCU: 0xAF, offset: 0x631, size: 0x8, addend: 0x0, symName: _getIPAddressString46.ipString, symObjAddr: 0x1E9B, symBinAddr: 0x10000802E, symSize: 0x0 }
-  - { offsetInCU: 0xD5, offset: 0x657, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x100002F58, symSize: 0x188 }
-  - { offsetInCU: 0xFA, offset: 0x67C, size: 0x8, addend: 0x0, symName: _getIPAddress46.ipAddress, symObjAddr: 0x1EC9, symBinAddr: 0x10000805C, symSize: 0x0 }
-  - { offsetInCU: 0x379, offset: 0x8FB, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002DEC, symSize: 0x74 }
-  - { offsetInCU: 0x3AB, offset: 0x92D, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100002EA0, symSize: 0x24 }
-  - { offsetInCU: 0x3D3, offset: 0x955, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x100002EC4, symSize: 0x94 }
-  - { offsetInCU: 0x425, offset: 0x9A7, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x1000030E0, symSize: 0x58 }
-  - { offsetInCU: 0x477, offset: 0x9F9, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x100003138, symSize: 0x28 }
-  - { offsetInCU: 0x49F, offset: 0xA21, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x1000031D4, symSize: 0x28 }
-  - { offsetInCU: 0x4C7, offset: 0xA49, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x1000031FC, symSize: 0x40 }
-  - { offsetInCU: 0x4DC, offset: 0xA5E, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x10000323C, symSize: 0xD4 }
-  - { offsetInCU: 0x26, offset: 0xBA7, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100003310, symSize: 0x30 }
-  - { offsetInCU: 0x4D, offset: 0xBCE, size: 0x8, addend: 0x0, symName: _pollFileDescriptors, symObjAddr: 0xCF8, symBinAddr: 0x100008098, symSize: 0x0 }
-  - { offsetInCU: 0xA2, offset: 0xC23, size: 0x8, addend: 0x0, symName: _currentPollSetSize, symObjAddr: 0xCF0, symBinAddr: 0x100008090, symSize: 0x0 }
-  - { offsetInCU: 0xB7, offset: 0xC38, size: 0x8, addend: 0x0, symName: _maxFileDescriptor, symObjAddr: 0xD00, symBinAddr: 0x1000080A0, symSize: 0x0 }
-  - { offsetInCU: 0xC0, offset: 0xC41, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100003310, symSize: 0x30 }
-  - { offsetInCU: 0xD5, offset: 0xC56, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x100003340, symSize: 0xA8 }
-  - { offsetInCU: 0xF9, offset: 0xC7A, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x1000033E8, symSize: 0x100 }
-  - { offsetInCU: 0x12B, offset: 0xCAC, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x1000034E8, symSize: 0x38 }
-  - { offsetInCU: 0x14F, offset: 0xCD0, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x100003520, symSize: 0xF0 }
-  - { offsetInCU: 0x26, offset: 0xD48, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100003610, symSize: 0x94 }
-  - { offsetInCU: 0x49, offset: 0xD6B, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100003610, symSize: 0x94 }
-  - { offsetInCU: 0xA9, offset: 0xDCB, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x1000036A4, symSize: 0x74 }
-  - { offsetInCU: 0x109, offset: 0xE2B, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x100003718, symSize: 0x6C }
-  - { offsetInCU: 0x14D, offset: 0xE6F, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x100003784, symSize: 0x60 }
-  - { offsetInCU: 0x26, offset: 0xF0D, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x1000037E4, symSize: 0xF0 }
-  - { offsetInCU: 0x53, offset: 0xF3A, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x1000037E4, symSize: 0xF0 }
-  - { offsetInCU: 0xA5, offset: 0xF8C, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x1000038D4, symSize: 0x1DC }
-  - { offsetInCU: 0x123, offset: 0x100A, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x2CC, symBinAddr: 0x100003AB0, symSize: 0x24 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x1000024BC, symSize: 0x5C }
+  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x1000024BC, symSize: 0x5C }
+  - { offsetInCU: 0xA1, offset: 0xA1, size: 0x8, addend: 0x0, symName: _checkArgs, symObjAddr: 0x5C, symBinAddr: 0x100002518, symSize: 0x98 }
+  - { offsetInCU: 0xE5, offset: 0xE5, size: 0x8, addend: 0x0, symName: _serverControl, symObjAddr: 0xF4, symBinAddr: 0x1000025B0, symSize: 0x88 }
+  - { offsetInCU: 0x125, offset: 0x125, size: 0x8, addend: 0x0, symName: _addNewSocket, symObjAddr: 0x17C, symBinAddr: 0x100002638, symSize: 0x34 }
+  - { offsetInCU: 0x157, offset: 0x157, size: 0x8, addend: 0x0, symName: _processClient, symObjAddr: 0x1B0, symBinAddr: 0x10000266C, symSize: 0x124 }
+  - { offsetInCU: 0x26, offset: 0x1ED, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100002790, symSize: 0x188 }
+  - { offsetInCU: 0xA3, offset: 0x26A, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100002790, symSize: 0x188 }
+  - { offsetInCU: 0xF5, offset: 0x2BC, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x100002918, symSize: 0x24 }
+  - { offsetInCU: 0x11D, offset: 0x2E4, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x10000293C, symSize: 0xD0 }
+  - { offsetInCU: 0x17D, offset: 0x344, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x100002A0C, symSize: 0x158 }
+  - { offsetInCU: 0x1EB, offset: 0x3B2, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x100002B64, symSize: 0x134 }
+  - { offsetInCU: 0x23D, offset: 0x404, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x100002C98, symSize: 0x154 }
+  - { offsetInCU: 0x26, offset: 0x584, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002DEC, symSize: 0x74 }
+  - { offsetInCU: 0x41, offset: 0x59F, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100002E60, symSize: 0x40 }
+  - { offsetInCU: 0x66, offset: 0x5C4, size: 0x8, addend: 0x0, symName: _ipAddressToString.ipString, symObjAddr: 0x1E6D, symBinAddr: 0x100008000, symSize: 0x0 }
+  - { offsetInCU: 0x8A, offset: 0x5E8, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x100003160, symSize: 0x74 }
+  - { offsetInCU: 0xAF, offset: 0x60D, size: 0x8, addend: 0x0, symName: _getIPAddressString46.ipString, symObjAddr: 0x1E9B, symBinAddr: 0x10000802E, symSize: 0x0 }
+  - { offsetInCU: 0xD5, offset: 0x633, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x100002F58, symSize: 0x188 }
+  - { offsetInCU: 0xFA, offset: 0x658, size: 0x8, addend: 0x0, symName: _getIPAddress46.ipAddress, symObjAddr: 0x1EC9, symBinAddr: 0x10000805C, symSize: 0x0 }
+  - { offsetInCU: 0x379, offset: 0x8D7, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002DEC, symSize: 0x74 }
+  - { offsetInCU: 0x3AB, offset: 0x909, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100002EA0, symSize: 0x24 }
+  - { offsetInCU: 0x3D3, offset: 0x931, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x100002EC4, symSize: 0x94 }
+  - { offsetInCU: 0x425, offset: 0x983, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x1000030E0, symSize: 0x58 }
+  - { offsetInCU: 0x477, offset: 0x9D5, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x100003138, symSize: 0x28 }
+  - { offsetInCU: 0x49F, offset: 0x9FD, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x1000031D4, symSize: 0x28 }
+  - { offsetInCU: 0x4C7, offset: 0xA25, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x1000031FC, symSize: 0x40 }
+  - { offsetInCU: 0x4DC, offset: 0xA3A, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x10000323C, symSize: 0xD4 }
+  - { offsetInCU: 0x26, offset: 0xB83, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100003310, symSize: 0x30 }
+  - { offsetInCU: 0x4D, offset: 0xBAA, size: 0x8, addend: 0x0, symName: _pollFileDescriptors, symObjAddr: 0xCF8, symBinAddr: 0x100008098, symSize: 0x0 }
+  - { offsetInCU: 0xA2, offset: 0xBFF, size: 0x8, addend: 0x0, symName: _currentPollSetSize, symObjAddr: 0xCF0, symBinAddr: 0x100008090, symSize: 0x0 }
+  - { offsetInCU: 0xB7, offset: 0xC14, size: 0x8, addend: 0x0, symName: _maxFileDescriptor, symObjAddr: 0xD00, symBinAddr: 0x1000080A0, symSize: 0x0 }
+  - { offsetInCU: 0xC0, offset: 0xC1D, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100003310, symSize: 0x30 }
+  - { offsetInCU: 0xD5, offset: 0xC32, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x100003340, symSize: 0xA8 }
+  - { offsetInCU: 0xF9, offset: 0xC56, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x1000033E8, symSize: 0x100 }
+  - { offsetInCU: 0x12B, offset: 0xC88, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x1000034E8, symSize: 0x38 }
+  - { offsetInCU: 0x14F, offset: 0xCAC, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x100003520, symSize: 0xF0 }
+  - { offsetInCU: 0x26, offset: 0xD24, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100003610, symSize: 0x94 }
+  - { offsetInCU: 0x49, offset: 0xD47, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100003610, symSize: 0x94 }
+  - { offsetInCU: 0xA9, offset: 0xDA7, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x1000036A4, symSize: 0x74 }
+  - { offsetInCU: 0x109, offset: 0xE07, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x100003718, symSize: 0x6C }
+  - { offsetInCU: 0x14D, offset: 0xE4B, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x100003784, symSize: 0x60 }
+  - { offsetInCU: 0x26, offset: 0xEE9, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x1000037E4, symSize: 0xF0 }
+  - { offsetInCU: 0x53, offset: 0xF16, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x1000037E4, symSize: 0xF0 }
+  - { offsetInCU: 0xA5, offset: 0xF68, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x1000038D4, symSize: 0x1DC }
+  - { offsetInCU: 0x123, offset: 0xFE6, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x2CC, symBinAddr: 0x100003AB0, symSize: 0x24 }
 ...
